# soroban-dev-console

./: CONTRIBUTING.md  README.md  create-batch2-issues.sh  create-issues.sh  issue#21.md  issue#6.md  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/account/: page.tsx
app/contracts/: page.tsx
app/contracts/[contractId]/: page.tsx
app/dashboard/: page.tsx
app/deploy/: page.tsx
app/deploy/wasm/: page.tsx
app/docs/: layout.tsx  page.tsx
app/settings/: page.tsx
app/tx/: page.tsx
apps/api/: .env.example  package.json
apps/web/: package.json  tsconfig.json
components/: app-sidebar.tsx  contract-call-form.tsx  contract-events.tsx  contract-storage.tsx  contract-upgrade-modal.tsx  data-management.tsx  docs-sidebar.tsx  fund-account-button.tsx  network-switcher.tsx  site-header.tsx  token-dashboard.tsx  transaction-feed.tsx  wallet-connect.tsx
components/ui/: sheet.tsx  sidebar.tsx  textarea.tsx
contracts/: Cargo.toml
contracts/auth-tester/: Cargo.toml
contracts/auth-tester/src/: lib.rs
contracts/counter-fixture/: Cargo.toml
contracts/counter-fixture/src/: lib.rs
contracts/error-trigger/: Cargo.toml
contracts/source-registry/: Cargo.toml
contracts/token-fixture/: Cargo.toml
contracts/token-fixture/src/: lib.rs
contracts/types-tester/: Cargo.toml
contracts/types-tester/src/: lib.rs
docs/: CODEX_CONTEXT.md
lib/: friendbot.ts  soroban-types.ts  soroban.ts
store/: useAbiStore.ts  useContractStore.ts  useNetworkStore.ts  useWallet.ts  useWasmStore.ts
(+63 files in other folders)
